css fix for text wrap in tabbar

--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -7,6 +7,7 @@ ion-tab-bar {
 }
 
 ion-tab-button {
+  width: 3rem;
   --color: var(--ion-color-primary-contrast);
   --color-selected: var(--ion-color-primary-contrast);
 }
@@ -35,9 +36,6 @@ ion-tab-button {
       overflow: hidden;
       text-wrap: wrap;
     }
-  }
-  ion-label {
-    white-space: pre-line !important;
   }
 }
 .home-screen{
